--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
       <version>1.5</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.clerezza.ext</groupId>
+      <artifactId>org.json.simple</artifactId>
+      <version>0.4</version>
+    </dependency>
+
 
   </dependencies>
 
