Lab 2 - read dates from CSV, parse BNM curses for these dates and write to Excel

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,19 @@
       <artifactId>org.json.simple</artifactId>
       <version>0.4</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.thoughtworks.xstream</groupId>
+      <artifactId>xstream</artifactId>
+      <version>1.4.11.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.sun.jersey</groupId>
+      <artifactId>jersey-client</artifactId>
+      <version>1.9.1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
